# airscan-paperless

./: flake.nix  pyproject.toml
airscan_paperless/: __main__.py  paperless.py  scan.py
